--- a/src/client/styles/_custom.scss
+++ b/src/client/styles/_custom.scss
@@ -1,14 +1,14 @@
-@import "node_modules/govuk_frontend_toolkit/stylesheets/colours";                                // Colour variables
-@import "node_modules/govuk_frontend_toolkit/stylesheets/font_stack";                             // Font family variables
-@import "node_modules/govuk_frontend_toolkit/stylesheets/measurements";                           // Widths and gutter variables
+@import "~govuk_frontend_toolkit/stylesheets/colours";                                // Colour variables
+@import "~govuk_frontend_toolkit/stylesheets/font_stack";                             // Font family variables
+@import "~govuk_frontend_toolkit/stylesheets/measurements";                           // Widths and gutter variables
 // Mixins
-@import "node_modules/govuk_frontend_toolkit/stylesheets/conditionals";                           // Media query mixin
-@import "node_modules/govuk_frontend_toolkit/stylesheets/device-pixels";                          // Retina image mixin
-@import "node_modules/govuk_frontend_toolkit/stylesheets/grid_layout";                            // Basic grid layout mixin
-@import "node_modules/govuk_frontend_toolkit/stylesheets/typography";                             // Core bold and heading mixins, also external links
-@import "node_modules/govuk_frontend_toolkit/stylesheets/shims";                                  // Inline block mixin, clearfix placeholder
+@import "~govuk_frontend_toolkit/stylesheets/conditionals";                           // Media query mixin
+@import "~govuk_frontend_toolkit/stylesheets/device-pixels";                          // Retina image mixin
+@import "~govuk_frontend_toolkit/stylesheets/grid_layout";                            // Basic grid layout mixin
+@import "~govuk_frontend_toolkit/stylesheets/typography";                             // Core bold and heading mixins, also external links
+@import "~govuk_frontend_toolkit/stylesheets/shims";                                  // Inline block mixin, clearfix placeholder
 // Mixins to generate components (chunks of UI)
-@import "node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/alpha-beta";
-@import "node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/buttons";
-@import "node_modules/govuk_frontend_toolkit/stylesheets/design-patterns/breadcrumbs";
-@import 'node_modules/govuk-elements-sass/public/sass/elements';
+@import "~govuk_frontend_toolkit/stylesheets/design-patterns/alpha-beta";
+@import "~govuk_frontend_toolkit/stylesheets/design-patterns/buttons";
+@import "~govuk_frontend_toolkit/stylesheets/design-patterns/breadcrumbs";
+@import '~govuk-elements-sass/public/sass/elements';
