header/footer, lusca integration (wip), landing goes to login

--- a/src/client/styles/index.scss
+++ b/src/client/styles/index.scss
@@ -2,3 +2,6 @@
 @import "common/variables";
 @import "common/utils";
 @import "common/global";
+
+@import "components/header";
+@import "components/footer";
