--- a/templates/2xx.html
+++ b/templates/2xx.html
@@ -30,7 +30,8 @@
 			<div class="header-global">
 				<div class="header-logo">
 					<a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content">
-						GOV.UK <span> Learning</span>
+						<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> GOV.UK
+						<span>Learning</span>
 					</a>
 				</div>
 			</div>
