remove src/, build main.css in assets/styles/

--- a/templates/2xx.html
+++ b/templates/2xx.html
@@ -13,7 +13,7 @@
 
 	<!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
 
-	<link rel="stylesheet" href="./../client/main.css">
+	<link rel="stylesheet" href="./styles/main.css">
 
 
 	%sapper.styles%
