--- a/component/Find.html
+++ b/component/Find.html
@@ -3,7 +3,7 @@
 </div>
 
 <script>
-    import Searchbar from './../components/Searchbar.html';
+    import Searchbar from './Searchbar.html';
     export default {
         data () {
             return {
