--- a/component/Layout.html
+++ b/component/Layout.html
@@ -1,6 +1,7 @@
-
 <div id="global-cookie-message">
-	<p>GOV.UK uses cookies to make the site simpler.<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a></p>
+	<p>GOV.UK uses cookies to make the site simpler.
+		<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a>
+	</p>
 </div>
 
 <header role="banner" id="global-header" class="with-proposition">
@@ -19,7 +20,8 @@
 <div class="phase-banner">
 	<p>
 		<strong class="phase-tag">BETA</strong>
-		<span>This is a new service – your&nbsp;<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
+		<span>This is a new service – your&nbsp;
+			<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
 	</p>
 </div>
 
@@ -35,8 +37,12 @@
 		<div class="footer-meta">
 			<div class="footer-meta-inner">
 				<div class="open-government-licence">
-					<p class="logo"><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a></p>
-					<p>All content is available under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated</p>
+					<p class="logo">
+						<a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a>
+					</p>
+					<p>All content is available under the
+						<a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
+						 rel="license">Open Government Licence v3.0</a>, except where otherwise stated</p>
 				</div>
 			</div>
 			<div class="copyright">
@@ -45,10 +51,3 @@
 		</div>
 	</div>
 </footer>
-
-
-<script>
-	export default {
-
-	};
-</script>
