--- a/component/Page.html
+++ b/component/Page.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="mask-icon" href="./img/gov.uk_logotype_crown.png" color="#0b0c0c">
-        <meta name="theme-color" content="#0b0c0c" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:image" content="/img/opengraph-image.png">
-        <title>{{title}}</title>
-        <link rel="stylesheet" href="./styles/main.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="mask-icon" href="./img/gov.uk_logotype_crown.png" color="#0b0c0c">
+    <meta name="theme-color" content="#0b0c0c" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="/img/opengraph-image.png">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="./styles/main.css">
+</head>
 
-    <body>
-        <slot></slot>
-    </body>
+<body>
+    <slot></slot>
+</body>
 
 </html>
-
