search bar + dummy course list

--- a/component/Find.html
+++ b/component/Find.html
@@ -1,3 +1,9 @@
-<div class="column-full">
-    <Searchbar labelText="Find course" formAction="search"></Searchbar>
-</div>
+
+<h1 class="heading-large">Find course</h1>
+<form method="get" role="search">
+    <div class="form-group">
+        <input class="form-control" id="search" type="text" name="search" />
+        <input class="button" type="submit" value="Search" />
+    </div>
+</form>
+
