--- a/component/Layout.html
+++ b/component/Layout.html
@@ -4,19 +4,38 @@
 	</p>
 </div>
 
-<header role="banner" id="global-header" class="with-proposition">
+<header role="banner" id="global-header" class=" with-proposition">
 	<div class="header-wrapper">
 		<div class="header-global">
-			<div class="header-logo">
-				<a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content">
-					<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> GOV.UK
-					<span>Learning</span>
-				</a>
+			<a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
+				<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> GOV.UK
+				<span>Learning</span>
+			</a>
+		</div>
+
+		<div class="header-proposition">
+			<div class="content">
+				<a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+				<nav id="proposition-menu" class="no-proposition-name">
+					<ul id="proposition-links">
+						<li>
+							<a href="/">Home</a>
+						</li>
+						<li>
+							<a href="/profile">Profile</a>
+						</li>
+
+						<li>
+							<a href="/search">Search</a>
+						</li>
+					</ul>
+				</nav>
+
 			</div>
 		</div>
 	</div>
-</header>
 
+</header>
 <div class="phase-banner">
 	<p>
 		<strong class="phase-tag">BETA</strong>
@@ -24,6 +43,7 @@
 			<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
 	</p>
 </div>
+
 
 <main class="elements-index" id="content" role="main">
 	<div class="site-wrapper">
