--- a/service/ui/component/User.html
+++ b/service/ui/component/User.html
@@ -1,8 +1,8 @@
-<form method="post" class="push-bottom">
+<form method="post" action="/profile" class="push-bottom">
     <input type="hidden" name="sessionDataKey" value="{{sessionDataKey}}" />
     <div class="form-group">
-        <label class="form-label" for="emailaddress">Email address</label>
-        <input class="form-control" id="emailaddress" name="emailaddress" value="{{emailAddress}}" type="text" readonly="readonly">
+        <label class="form-label" for="userName">Email address</label>
+        <input class="form-control" id="userName" name="userName" value="{{emailAddress}}" type="text" readonly="readonly">
     </div>
     <div class="form-group">
         <label class="form-label" for="department">Department</label>
@@ -16,4 +16,5 @@
         <label class="form-label" for="grade">Grade</label>
         <input class="form-control" id="grade" name="grade" type="text" value="{{grade}}">
     </div>
+    <input type="submit" class="button" value="Continue">
 </form>
