--- a/assets/styles/components/_footer.scss
+++ b/assets/styles/components/_footer.scss
@@ -105,9 +105,9 @@
             height: 17px;
             overflow:hidden;
             text-indent: -999em;
-            background: image-url("images/open-government-licence.png") 0 0 no-repeat;
+            background: url("/img/open-government-licence.png") 0 0 no-repeat;
             @include device-pixel-ratio() {
-              background-image: image-url("images/open-government-licence_2x.png");
+              background-image: url("/img/open-government-licence_2x.png");
               background-size: 41px 17px;
             }
           }
@@ -145,7 +145,7 @@
       a {
         display: block;
 
-        background-image: image-url("images/govuk-crest.png");
+        background-image: url("/img/govuk-crest.png");
         background-repeat: no-repeat;
         background-position: 50% 0%;
 
@@ -154,12 +154,12 @@
         }
 
         @include device-pixel-ratio() {
-          background-image: image-url("images/govuk-crest-2x.png");
+          background-image: url("/img/govuk-crest-2x.png");
           background-size: 125px 102px;
         }
 
         @include ie(6) {
-          background-image: image-url("images/govuk-crest-ie.png");
+          background-image: url("/img/govuk-crest-ie.png");
         }
 
         text-align: center;
