--- a/component/Layout.html
+++ b/component/Layout.html
@@ -1,5 +1,6 @@
 <div id="global-cookie-message">
-	<p>GOV.UK uses cookies to make the site simpler.
+	<p>
+		GOV.UK uses cookies to make the site simpler.
 		<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a>
 	</p>
 </div>
@@ -7,46 +8,39 @@
 <header role="banner" id="global-header" class=" with-proposition">
 	<div class="header-wrapper">
 		<div class="header-global">
-			<a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
-				<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> GOV.UK
-				<span>Learning</span>
-			</a>
+			<div class="header-logo">
+				<a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
+					<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> Learning Platform
+				</a>
+			</div>
 		</div>
 
 		<div class="header-proposition">
 			<div class="content">
 				<a href="#proposition-links" class="js-header-toggle menu">Menu</a>
-				<nav id="proposition-menu" class="no-proposition-name">
+				<nav id="proposition-menu">
 					<ul id="proposition-links">
-						<li>
-							<a href="/">Home</a>
-						</li>
-						<li>
-							<a href="/profile">Profile</a>
-						</li>
-
-						<li>
-							<a href="/search">Search</a>
-						</li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/profile">Profile</a></li>
+						<li><a href="/search">Search</a></li>
+						<li><a href="/sign-in">Sign in</a></li>
 					</ul>
 				</nav>
-
 			</div>
 		</div>
 	</div>
-
 </header>
-<div class="phase-banner">
-	<p>
-		<strong class="phase-tag">BETA</strong>
-		<span>This is a new service – your&nbsp;
-			<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
-	</p>
-</div>
-
+<div id="global-header-bar"></div>
 
 <main class="elements-index" id="content" role="main">
-	<div class="site-wrapper">
+	<div class="phase-banner">
+		<p>
+			<strong class="phase-tag">BETA</strong>
+			<span>This is a new service – your&nbsp;
+			<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
+		</p>
+	</div>
+	<div class="main-content">
 		<slot></slot>
 	</div>
 </main>
