Add reset password page (that does nothing) tweak structure of profile and search to match basic structure.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -12,7 +12,11 @@
 }
 
 #global-header {
+  .header-global {
+    width: 35% !important;
+  }
   .header-proposition {
+    width: 65% !important;
     text-align: right;
     #proposition-links {
       li {
