--- a/component/Layout.html
+++ b/component/Layout.html
@@ -1,9 +1,9 @@
-<div id="global-cookie-message">
-	<p>
-		GOV.UK uses cookies to make the site simpler.
-		<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a>
-	</p>
-</div>
+<!--<div id="global-cookie-message">-->
+	<!--<p>-->
+		<!--GOV.UK uses cookies to make the site simpler.-->
+		<!--<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a>-->
+	<!--</p>-->
+<!--</div>-->
 
 <header role="banner" id="global-header" class=" with-proposition">
 	<div class="header-wrapper">
@@ -30,6 +30,7 @@
 		</div>
 	</div>
 </header>
+
 <div id="global-header-bar"></div>
 
 <main class="elements-index" id="content" role="main">
