--- a/service/ui/component/User.html
+++ b/service/ui/component/User.html
@@ -1,19 +1,19 @@
 <form method="post" action="/profile" class="push-bottom">
     <div class="form-group">
         <label class="form-label" for="userName">Email address</label>
-        <input class="form-control" id="userName" name="userName" value="{{emailAddress}}" type="text" readonly="readonly">
+        <input class="form-control" id="userName" name="userName" value="{{user.emailAddress}}" type="text" readonly="readonly">
     </div>
     <div class="form-group">
         <label class="form-label" for="department">Department</label>
-        <input class="form-control" id="department" name="department" type="text" value="{{department}}">
+        <input class="form-control" id="department" name="department" type="text" value="{{user.department}}">
     </div>
     <div class="form-group">
         <label class="form-label" for="profession">Profession</label>
-        <input class="form-control" id="profession" name="profession" type="text" value="{{profession}}">
+        <input class="form-control" id="profession" name="profession" type="text" value="{{user.profession}}">
     </div>
     <div class="form-group">
         <label class="form-label" for="grade">Grade</label>
-        <input class="form-control" id="grade" name="grade" type="text" value="{{grade}}">
+        <input class="form-control" id="grade" name="grade" type="text" value="{{user.grade}}">
     </div>
     <input type="submit" class="button" value="Continue">
 </form>
