--- a/service/ui/component/Layout.html
+++ b/service/ui/component/Layout.html
@@ -5,12 +5,41 @@
 	<!--</p>-->
 <!--</div>-->
 
+<header role="banner" id="global-header" class=" with-proposition">
+	<div class="header-wrapper">
+		<div class="header-global">
+			<div class="header-logo">
+				<a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
+					<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> Learning Platform
+				</a>
+			</div>
+		</div>
+
+		{{#if !hideNav}}
+		<div class="header-proposition">
+			<div class="content">
+				<a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+				<nav id="proposition-menu">
+					<ul id="proposition-links">
+						<li><a href="/">Home</a></li>
+						<li><a href="/profile">Profile</a></li>
+						<li><a href="/search">Search</a></li>
+						<li><a href="/sign-out">Sign out</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+		{{/if}}
+	</div>
+</header>
+
+<div id="global-header-bar"></div>
 
 <main class="elements-index" id="content" role="main">
 	<div class="phase-banner">
 		<p>
 			<strong class="phase-tag">BETA</strong>
-			<span>This is a new service – your&nbsp;
+			<span>This is a new service – your
 			<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
 		</p>
 	</div>
