--- a/service/ui/component/Page.html
+++ b/service/ui/component/Page.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="mask-icon" href="./img/gov.uk_logotype_crown.png" color="#0b0c0c">
