--- a/service/ui/component/Recommended.html
+++ b/service/ui/component/Recommended.html
@@ -1,4 +1,4 @@
-<h2 class="heading-medium">Recommended for {{emailAddress}}</h2>
+<h2 class="heading-medium">Recommended for {{signedInUser.emailAddress}}</h2>
 <ul>
     <li><a href="">Health and safety</a></li>
     <li><a href="">due diligence</a></li>
