--- a/service/ui/component/Nav.html
+++ b/service/ui/component/Nav.html
@@ -12,9 +12,11 @@
 				<li>
 					<a href="/profile">Profile</a>
 				</li>
+				{{#if signedInUser.department || signedInUser.profession || signedInUser.grade }}
 				<li>
 					<a href="/search">Search</a>
 				</li>
+				{{/if}}
 				<li>
                     <a href="/sign-out">Sign out</a>
 				</li>
