--- a/service/ui/assets/styles/common/_variables.scss
+++ b/service/ui/assets/styles/common/_variables.scss
@@ -6,14 +6,13 @@
 $proposition-border: #2e3133;
 // Based on GOV.UK brand blue but slightly lighter so it hits contrast on the
 // black header bar when used as copy colour.
-$proposition-active-nav: #1d8feb;
+$proposition-active-nav: #af292e;
 
 $footer-background: $grey-3;
 $footer-border-top: #a1acb2;
 $footer-link: #454a4c;
 $footer-link-hover: #171819;
 $footer-text: $footer-link;
-
 
 $grey: #aaa;
 $white: #fff;
