Hack to fix JSON parsing in dgraph client.

--- a/service/ui/component/Course.html
+++ b/service/ui/component/Course.html
@@ -4,6 +4,6 @@
     {{#if course.courseStatus}}
         <strong class="course__progress">{{course.courseStatus}}</strong>
     {{/if}}
+        {{course.shortDescription }}
     </p>
-
 </div>
