--- a/service/ui/component/Nav.html
+++ b/service/ui/component/Nav.html
@@ -14,7 +14,7 @@
 				</li>
 				{{#if signedInUser.department || signedInUser.profession || signedInUser.grade }}
 				<li>
-					<a href="/search">Search</a>
+					<a href="/learning-plan">Learning plan</a>
 				</li>
 				{{/if}}
 				<li>
