--- a/service/ui/assets/styles/index.scss
+++ b/service/ui/assets/styles/index.scss
@@ -1,37 +1,38 @@
-@import "custom";
-@import "common/variables";
-@import "common/utils";
-@import "common/global";
+@import 'custom';
+@import 'common/variables';
+@import 'common/utils';
+@import 'common/global';
 
-@import "components/header";
-@import "components/footer";
+@import 'components/header';
+@import 'components/footer';
+@import 'components/course';
 
 .push-bottom {
-  margin-bottom: 30px;
-  display: block;
+	margin-bottom: 30px;
+	display: block;
 }
 
 #global-header {
-  .header-global {
-    width: 35% !important;
-  }
-  .header-proposition {
-    width: 65% !important;
-    text-align: right;
-    #proposition-links {
-      li {
-        display: inline;
-        border: none;
-        padding: 5px 0;
-        line-height: 1.25;
-        float: none;
-        width: 100%;
-        text-align: left;
+	.header-global {
+		width: 35% !important;
+	}
+	.header-proposition {
+		width: 65% !important;
+		text-align: right;
+		#proposition-links {
+			li {
+				display: inline;
+				border: none;
+				padding: 5px 0;
+				line-height: 1.25;
+				float: none;
+				width: 100%;
+				text-align: left;
 
-        a {
-          margin-left: 15px;
-        }
-      }
-    }
-  }
+				a {
+					margin-left: 15px;
+				}
+			}
+		}
+	}
 }
