--- a/service/ui/component/Course.html
+++ b/service/ui/component/Course.html
@@ -1,9 +1,14 @@
 <div class="course">
     <a href="{{course.uri}}">{{course.title}}</a>
+    {{#if course.shortDescription}}
     <p>
     {{#if course.courseStatus}}
         <strong class="course__progress">{{course.courseStatus}}</strong>
     {{/if}}
         {{course.shortDescription }}
+    </p>
+    {{/if}}
+    <p class="font-xsmall">
+    <span>Type:</span>{{course.tags}}
     </p>
 </div>
