Updated overview page so generated from course data.
Building key information from tags and new duration property on course.

--- a/service/ui/assets/styles/index.scss
+++ b/service/ui/assets/styles/index.scss
@@ -6,6 +6,7 @@
 @import 'components/header';
 @import 'components/footer';
 @import 'components/course';
+@import 'components/rightbox';
 
 .push-bottom {
 	margin-bottom: 30px;
