--- a/service/ui/component/Course.html
+++ b/service/ui/component/Course.html
@@ -1,5 +1,5 @@
 <div class="course" {{showType}}>
-    <a href="{{course.uri}}">{{course.title}}</a>
+    <a href="/courses/{{course.uid}}">{{course.title}}</a>
     {{#if course.shortDescription}}
     <p>
     {{#if course.courseStatus}}
