govuk js, adding basket page with view/collapse, basket controller, implement name into profile

--- a/src/service/ui/assets/styles/common/_utils.scss
+++ b/src/service/ui/assets/styles/common/_utils.scss
@@ -1,3 +1,17 @@
 /*
 * Mixins, includes.. cool .scss stuff :)
 */
+
+//element selector
+@mixin e($element) {
+	&__#{$element} {
+		@content;
+	}
+}
+
+//modifier selector
+@mixin m($modifier) {
+	&--#{$modifier} {
+		@content;
+	}
+}
