--- a/src/service/ui/component/Nav.html
+++ b/src/service/ui/component/Nav.html
@@ -12,7 +12,10 @@
 				<li>
 					<a href="/profile">Profile</a>
 				</li>
-				{{#if signedInUser.department || signedInUser.profession || signedInUser.grade }}
+                    {{#if signedInUser.department || signedInUser.profession || signedInUser.grade}}
+				<li>
+                    <a href="/basket">Basket</a>
+                </li>
 				<li>
 					<a href="/learning-plan">Learning plan</a>
 				</li>
@@ -29,4 +32,5 @@
 		</nav>
 	</div>
 </div>
+
 
