change getLearningRecord getLearningRecordOf and pass in enum, fix passport.ts for givenName, basket page

--- a/src/service/ui/component/Page.html
+++ b/src/service/ui/component/Page.html
@@ -20,9 +20,9 @@
     <Header />
 
     <slot/>
-    <script src="./javascript/main.js"></script>
-        <script src="./javascript/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
-        <script src="./javascript/govuk_frontend_toolkit/govuk/modules.js"></script>
+    <script src="./js/main.js"></script>
+        <script src="./js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
+        <script src="./js/govuk_frontend_toolkit/govuk/modules.js"></script>
 
 </body>
 
