Added result and score to learning record.

--- a/src/service/ui/assets/styles/main.scss
+++ b/src/service/ui/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'components/rightbox';
 @import 'components/basket';
 @import 'components/learning';
+@import 'components/results';
 
 .push-bottom {
 	margin-bottom: 30px;
