--- a/src/service/ui/component/Learning.html
+++ b/src/service/ui/component/Learning.html
@@ -11,13 +11,13 @@
             {{/if}}
         </div>
 
-        <span class="learning__progress">{{course.state || 'not started'}}</span>
+        <span class="learning__progress">{{i18n.__(course.state || 'not started')}}</span>
 
         <div class="column-one-third">
             <p class="learning__information-desc"></p>
 
             <ul class="learning__information-list">
-                <li>{{course.type}}</li>
+                <li>{{i18n.__(course.type)}}</li>
                 <li>{{course.duration}}</li>
             </ul>
         </div>
