structure/style is more like govuk-templates now

--- a/src/service/ui/component/Nav.html
+++ b/src/service/ui/component/Nav.html
@@ -1,36 +1,28 @@
-<div class="header-proposition">
-	<div class="content">
-		<a href="#proposition-links" class="menu">
-			Menu
-		</a>
-		<nav id="proposition-menu">
-			<ul id="proposition-links">
-				{{#if signedInUser}}
-				<li>
-					<a href="/">Home</a>
-				</li>
-				<li>
-					<a href="/profile">Profile</a>
-				</li>
-                    {{#if signedInUser.department || signedInUser.profession || signedInUser.grade}}
-				<li>
-                    <a href="/basket">Basket</a>
-                </li>
-				<li>
-					<a href="/learning-plan">Learning plan</a>
-				</li>
-				{{/if}}
-				<li>
-                    <a href="/sign-out">Sign out</a>
-				</li>
-				{{else}}
-				<li>
-					<a href="/sign-in">Sign in</a>
-				</li>
-				{{/if}}
-			</ul>
-		</nav>
-	</div>
-</div>
-
-
+<nav id="proposition-menu">
+    <a href="/" id="proposition-name">Learning Platform</a>
+    <ul id="proposition-links">
+        {{#if signedInUser}}
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/profile">Profile</a>
+        </li>
+            {{#if signedInUser.department || signedInUser.profession || signedInUser.grade}}
+        <li>
+            <a href="/basket">Basket</a>
+        </li>
+        <li>
+            <a href="/learning-plan">Learning plan</a>
+        </li>
+        {{/if}}
+        <li>
+            <a href="/sign-out">Sign out</a>
+        </li>
+        {{else}}
+        <li>
+            <a href="/sign-in">Sign in</a>
+        </li>
+        {{/if}}
+    </ul>
+</nav>
