--- a/src/service/ui/component/Header.html
+++ b/src/service/ui/component/Header.html
@@ -1,13 +1,19 @@
 <header role="banner" id="global-header" class=" with-proposition">
 	<div class="header-wrapper">
 		<div class="header-global">
-			<div class="header-logo">
-				<a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
-					<img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> Learning Platform
-				</a>
-			</div>
-		</div>
-		<Nav />
+            <div class="header-logo">
+                <a href="/" title="Go to the GOV.UK homepage" id="logo" class="content">
+                    <img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> Civil Service
+                </a>
+            </div>
+        </div>
+        <div class="header-proposition">
+            <div class="content">
+                <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+                <Nav/>
+            </div>
+        </div>
+
 	</div>
 </header>
 
