--- a/src/service/ui/component/Page.html
+++ b/src/service/ui/component/Page.html
@@ -20,9 +20,11 @@
     <Header />
 
     <slot/>
+    <script src="./js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
+    <script src="./js/govuk_frontend_toolkit/govuk/modules.js"></script>
     <script src="./js/main.js"></script>
-        <script src="./js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
-        <script src="./js/govuk_frontend_toolkit/govuk/modules.js"></script>
+    <script>if (typeof window.GOVUK === 'undefined') document.body.className = document.body.className.replace('js-enabled', '');</script>
+    <script src="./js/govuk_frontend_toolkit/govuk/govuk-template.js"></script>
 
 </body>
 
