--- a/src/service/ui/component/Page.html
+++ b/src/service/ui/component/Page.html
@@ -5,12 +5,12 @@
     <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="mask-icon" href="./img/gov.uk_logotype_crown.png" color="#0b0c0c">
+    <link rel="mask-icon" href="/img/gov.uk_logotype_crown.png" color="#0b0c0c">
     <meta name="theme-color" content="#0b0c0c" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/opengraph-image.png">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
 
 
@@ -20,11 +20,11 @@
     <Header />
 
     <slot/>
-    <script src="./js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
-    <script src="./js/govuk_frontend_toolkit/govuk/modules.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="/js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
+    <script src="/js/govuk_frontend_toolkit/govuk/modules.js"></script>
+    <script src="/js/main.js"></script>
     <script>if (typeof window.GOVUK === 'undefined') document.body.className = document.body.className.replace('js-enabled', '');</script>
-    <script src="./js/govuk_frontend_toolkit/govuk/govuk-template.js"></script>
+    <script src="/js/govuk_frontend_toolkit/govuk/govuk-template.js"></script>
 
 </body>
 
