--- a/src/service/ui/component/Header.html
+++ b/src/service/ui/component/Header.html
@@ -3,7 +3,7 @@
 		<div class="header-global">
             <div class="header-logo">
                 <a href="/" title="Go to the Learning Platform homepage" id="logo" class="content">
-                    <img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt=""> Civil Service
+                    Civil Service Learning
                 </a>
             </div>
         </div>
