--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import 'components/feedback';
 @import 'components/learning';
 @import 'components/results';
+@import 'components/booking';
 
 .push-bottom {
 	margin-bottom: 30px;
