--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'components/learning';
 @import 'components/results';
 @import 'components/search';
+@import 'components/booking';
 
 .push-bottom {
 	margin-bottom: 30px;
