--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'components/course';
 @import 'components/rightbox';
 @import 'components/basket';
+@import 'components/feedback';
 @import 'components/learning';
 @import 'components/results';
 
