--- a/src/ui/component/Layout.html
+++ b/src/ui/component/Layout.html
@@ -1,8 +1,8 @@
 <!--<div id="global-cookie-message">-->
-	<!--<p>-->
-		<!--GOV.UK uses cookies to make the site simpler.-->
-		<!--<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a>-->
-	<!--</p>-->
+<!--<p>-->
+<!--GOV.UK uses cookies to make the site simpler.-->
+<!--<a href="https://www.gov.uk/help/cookies"> Find out more about cookies</a>-->
+<!--</p>-->
 <!--</div>-->
 
 <main class="elements-index" id="content" role="main">
@@ -10,11 +10,33 @@
 		<p>
 			<strong class="phase-tag">BETA</strong>
 			<span>This is a new service – your
-			<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
+				<a href="mailto:feedback@cslearning.gov.uk">feedback</a>&nbsp;will help us to improve it.</span>
 		</p>
 	</div>
+	{{#if currentReq.session.flash}}
+	<div class="flash-message">
+		{{currentReq.session.flash}} {{(delete currentReq.session.flash) && ''}}
+	</div>
+	{{/if}}
 	<div class="main-content">
 		<slot></slot>
+	</div>
+	<div class="column-full">
+		<div class="feedback">
+			<a class="feedback-prompt" href="">Is there anything wrong with this page?</a>
+			<div class="feedback-details">
+				<h2>Help us improve Civil Service Learning</h2>
+				<p>Don’t include personal or financial information like your National Insurance number or credit card details.</p>
+				<form action="/feedback.record" method="POST">
+					<label for="whatDoing">What were you doing?</label>
+					<input name="whatDoing" id="whatDoing">
+					<label for="wentWrong">What went wrong?</label>
+					<input name="wentWrong" id="wentWrong">
+					<input type="hidden" name="pageUrl" id="pageUrl" value="{{currentReq.originalUrl}}">
+					<button class="button" name="commit" type="submit">Send</button>
+				</form>
+			</div>
+		</div>
 	</div>
 </main>
 
@@ -27,8 +49,7 @@
 						<a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a>
 					</p>
 					<p>All content is available under the
-						<a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
-						 rel="license">Open Government Licence v3.0</a>, except where otherwise stated</p>
+						<a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence v3.0</a>, except where otherwise stated</p>
 				</div>
 			</div>
 			<div class="copyright">
