src/ui: implement page feedback handling

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -3,10 +3,12 @@
 @import 'common/utils';
 @import 'common/global';
 
-@import 'components/course';
-@import 'components/basket';
-@import 'components/footer';
 @import 'components/header';
+@import 'components/footer';
+@import 'components/course';
+@import 'components/rightbox';
+@import 'components/basket';
+@import 'components/feedback';
 @import 'components/learning';
 @import 'components/results';
 @import 'components/search';
