--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -11,6 +11,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{config.GOOGLE_ANALYTICS_ID}}"></script> {{{config.GOOGLE_ANALYTICS_CODE}}}
 </head>
 <body>
     <Header />
