Adding logic to redisplay recurrent courses.

--- a/src/ui/component/Learning.html
+++ b/src/ui/component/Learning.html
@@ -25,7 +25,11 @@
         <span class="learning__progress">{{i18n(course.state || 'not started')}}</span>
 
         <div class="column-one-third">
-            <p class="learning__information-desc"></p>
+            <p class="learning__information-desc">
+                {{#if course.requiredBy}}
+                    Required by {{formatDate(course.nextRequiredBy())}}
+                {{/if}}
+            </p>
 
             <ul class="learning__information-list">
                 <li>{{i18n(course.type)}}</li>
