html entity also

--- a/src/ui/component/Layout.html
+++ b/src/ui/component/Layout.html
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 			<div class="copyright">
-				<a href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/copyright-and-re-use/crown-copyright/">© Crown copyright</a>
+				<a href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/copyright-and-re-use/crown-copyright/">&copy; Crown copyright</a>
 			</div>
 		</div>
 	</div>
