--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -13,3 +13,26 @@
 .disabled {
 	cursor: not-allowed;
 }
+
+.aspect {
+	@include e(container) {
+		height: 0;
+		overflow: hidden;
+		width: 100%;
+		padding-top: 2/3 * 100%;
+		position: relative;
+	}
+
+	@include e(content) {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		iframe,
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
