--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'components/results';
 @import 'components/booking';
 @import 'components/breadcrumbs';
+@import 'components/search';
 
 .push-bottom {
 	margin-bottom: 30px;
