cancelled booking frontend

--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -78,4 +78,10 @@
 	@include e(return) {
 		float: right;
 	}
+	@include e(item) {
+		@include m(key) {
+			width: 50%;
+			display: inline-block;
+		}
+	}
 }
