Update cancel booking with new activityId.

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'components/learning';
 @import 'components/results';
 @import 'components/booking';
+@import 'components/breadcrumbs';
 
 .push-bottom {
 	margin-bottom: 30px;
