use li instead of list

--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -74,6 +74,16 @@
 	}
 }
 
+.booking {
+	@include e(key) {
+		display: inline-block;
+		width: 50%;
+		@include media($tablet-breakpoint) {
+			width: 25%;
+		}
+	}
+}
+
 .cancel {
 	@include e(return) {
 		float: right;
