--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -18,10 +18,11 @@
     <Layout>
         <slot></slot>
     </Layout>
+    <script>document.body.className = document.body.className.replace('', 'js-enabled');</script>
     <script src="/js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
     <script src="/js/govuk_frontend_toolkit/govuk/modules.js"></script>
-    <script src="/js/main.js"></script>
-    <script>if (typeof window.GOVUK === 'undefined') document.body.className = document.body.className.replace('js-enabled', '');</script>
     <script src="/js/govuk_frontend_toolkit/govuk/govuk-template.js"></script>
+    <script src="/js/main.js"></script>
+
 </body>
 </html>
